--- a/internship_pisa.tex
+++ b/internship_pisa.tex
@@ -293,7 +293,7 @@ The discrete scenario reduction problem can be formulated as the MILP
     \end{align*}
     with $D\in \mathbb{S}^n$ and $D_{ij}=\lVert x_i-x_j\rVert^l$
 \end{theorem}
-\rp{first constraint means $\sum_{j=1}^n\pi_{ij}=1$ for all $i$, second forces $\lambda_i$ to be 1 if you choose $x_j$ and the third one counts the number of atom you choose. My issue concerns the objective function, idk why there is a $\frac{1}{n}$ in front ?}
+\rp{first constraint means $\sum_{j=1}^n\pi_{ij}=1$ for all $i$ (what seems weird), second forces $\lambda_i$ to be 1 if you choose $x_j$ and the third one counts the number of atoms you choose.}
 \clearpage
 \appendix
 \section{Wasserstein distance is a distance}
